--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "version": "0.1.0",
+    "engines": {
+    "node": "15.x",
+    "npm": "7.x"
+  },
   "private": true,
   "dependencies": {
     "@emotion/core": "^11.0.0",
